--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -31,6 +31,8 @@
   title: "Basic Geometric Modeling"
 -
   date: "Week 3: Feb 2"
+  materials: "**Zoom Only - No In-Person** <br/>
+               [Live Zoom Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)"
   title: "MP2 Tech Demo"
 -  
   date: "Week 4: Feb 7"
