--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -26,8 +26,8 @@
   date: "Week 3: Jan 31"
   materials: "**[MP 1](https://illinois-cs415.github.io/assignments/mp1.html) Due** <br/>
               [Live Zoom Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
-              Art: Bezier Patches [PDF]()<br/>
-              Art: Mazes! [PDF]()" 
+              Art: Bezier Patches [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier2.pdf)<br/>
+              Art: Mazes! [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MazeGeneration.pdf)" 
   title: "Basic Geometric Modeling"
 -
   date: "Week 3: Feb 2"
