--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -32,6 +32,7 @@
 -
   date: "Week 3: Feb 2"
   materials: "**Zoom Only - No In-Person** <br/>
+              **[MP 2 Released](https://illinois-cs415.github.io/assignments/mp2.html)**<br/>
                [Live Zoom Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)"
   title: "MP2 Tech Demo"
 -  
@@ -48,6 +49,7 @@
   title: "Graphics: Rasterization"
 - 
   date: "Week 6: Feb 21"
+  materials: "**[MP 2 Due](https://illinois-cs415.github.io/assignments/mp2.html)**<br/>
   title: "Graphics: Shading"
 -
   date: "Week 6: Feb 23"
