--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -49,11 +49,11 @@
   title: "Graphics: Rasterization"
 - 
   date: "Week 6: Feb 21"
-  materials: "**[MP 2 Due](https://illinois-cs415.github.io/assignments/mp2.html)**<br/>
+  materials: "**[MP 2 Due](https://illinois-cs415.github.io/assignments/mp2.html)**"
   title: "Graphics: Shading"
 -
   date: "Week 6: Feb 23"
-  title: "Guest Speaker: Dan Cermak"
+  title: "Project & Game Design"
 - 
   date: "Week 7: Feb 28"
   title: "Project & Game Design" 
