--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -32,7 +32,7 @@
 -
   date: "Week 3: Feb 2"
   materials: "**Zoom Only - No In-Person** <br/>
-              **[MP 2 Released](https://illinois-cs415.github.io/assignments/mp2.html)**<br/>
+              **[MP 2 Assigned](https://illinois-cs415.github.io/assignments/mp2.html)**<br/>
                [Live Zoom Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)"
   title: "MP2 Tech Demo"
 -  
