--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -33,7 +33,7 @@
   date: "Week 3: Feb 2"
   materials: "**Zoom Only - No In-Person** <br/>
               **[MP 2 Assigned](https://illinois-cs415.github.io/assignments/mp2.html)**<br/>
-               [Live Zoom Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)"
+               [Recorded Video](https://classtranscribe.illinois.edu/video?id=7e47ee3b-7685-45f3-a876-66b7071a9822&begin=561&from=sharedlink)"
   title: "MP2 Tech Demo"
 -  
   date: "Week 4: Feb 7"
