--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -25,7 +25,7 @@
 -
   date: "Week 3: Jan 31"
   materials: "**[MP 1](https://illinois-cs415.github.io/assignments/mp1.html) Due** <br/>
-              [Live Zoom Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+              [Recorded Video](https://classtranscribe.illinois.edu/video?id=1637e948-b8eb-4ac2-849f-3f2a7bc1bc03&begin=158&from=sharedlink)<br/>
               Art: Bezier Patches [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier2.pdf)<br/>
               Art: Mazes! [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MazeGeneration.pdf)" 
   title: "Basic Geometric Modeling"
