--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -37,13 +37,13 @@
   title: "MP2 Tech Demo"
 -  
   date: "Week 4: Feb 7"
-  title: "UE5 Nanite Virtual Geometry"
+  title: "Game Design"
 -  
   date: "Week 4: Feb 9"
-  title: "MP2 Tech Demo"
+  title: "Graphics: UE5 Virtual Geometry"
 -
   date: "Week 5: Feb 14"
-  title: "Graphics: Rendering Basics"
+  title: "Active Learning: HW 1"
 -
   date: "Week 5: Feb 16"
   title: "Graphics: Rasterization"
