--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -37,7 +37,7 @@
   title: "MP2 Tech Demo"
 -  
   date: "Week 4: Feb 7"
-  materials: "[Live Video Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+  materials: "[Recorded Video](https://classtranscribe.illinois.edu/video?id=46919e22-62bf-442a-8367-3bfd05c19ae1&begin=421&from=sharedlink)<br/>
               Game Design [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture01.pdf)<br/>
               Level Design [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture04.pdf)"
   title: "Game Design"
