--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -43,17 +43,18 @@
   title: "Game Design"
 -  
   date: "Week 4: Feb 9"
-  materials: "  [Live Video Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+  materials: "  [Recorded Video](https://classtranscribe.illinois.edu/video?id=a0fb0e17-4f45-4460-b35d-889d1393a3f4&begin=192&from=sharedlink)<br/>
                 Level-of-Detail [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-LOD.pdf)<br/>
-                LOD Worksheet [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/pdf/CS%20415_%20Understanding%20Mesh%20LOD%20and%20UE5%20Nanite.pdf)<br/>
-                Projection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PerspectiveProjection.pdf)" 
+                LOD Worksheet [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/pdf/Copy%20of%20CS%20415_%20Understanding%20Mesh%20LOD%20and%20UE5%20Nanite-Solution.pdf)   
+                " 
   title: "Rendering: LOD and Projection"
 -
   date: "Week 5: Feb 14"
   title: "Active Learning: HW 1!"
 -
   date: "Week 5: Feb 16"
-  title: "Graphics: Rasterization"
+  materials: "Projection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PerspectiveProjection.pdf)"
+  title: "Graphics: Projection and Rasterization"
 - 
   date: "Week 6: Feb 21"
   materials: "**[MP 2 Due](https://illinois-cs415.github.io/assignments/mp2.html)**"
