--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -52,6 +52,7 @@
   date: "Week 5: Feb 14"
   materials: "[Live Video Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
               Projection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PerspectiveProjection.pdf) <br/>
+              **HW1 Assigned** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105)<br/>
               HW1 Hints [PDF Available Soon]()"
   title: "Rendering: Projection"
 -
@@ -68,6 +69,7 @@
   title: "Project & Game Design"
 - 
   date: "Week 7: Feb 28"
+  materials: "**HW1 Due**[PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105)<br/>"
   title: "Project & Game Design" 
 -  
   date: "Week 7: Mar 2"
