--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -59,7 +59,8 @@
   date: "Week 5: Feb 16"
   materials: "**Zoom Only - No In-Person** <br/>
                Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Rasterization.pdf) <br/>
-               [Live Video Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>"
+               [Recorded Video](https://classtranscribe.illinois.edu/video?id=36abfac0-7011-49b4-9f67-f9766b24900f&begin=128&from=sharedlink)<br/>
+               MP2 Demo [Video Available Soon]()"
   title: "Rendering: Rasterization"
 - 
   date: "Week 6: Feb 21"
