--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -53,7 +53,7 @@
   materials: "[Recorded Video](https://classtranscribe.illinois.edu/video?id=437d2806-9840-4ce6-9f41-5c2441f39df7&begin=263&from=sharedlink)<br/>
               Projection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PerspectiveProjection.pdf) <br/>
               **HW1 Assigned** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105)<br/>
-              HW1 Hints [PDF Available Soon]()"
+              HW1 Hints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/pdf/HW1Hints.pdf)"
   title: "Rendering: Projection"
 -
   date: "Week 5: Feb 16"
