--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -59,19 +59,21 @@
   date: "Week 5: Feb 16"
   materials: "**Zoom Only - No In-Person** <br/>
                Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Rasterization.pdf) <br/>
-               [Recorded Video](https://classtranscribe.illinois.edu/video?id=36abfac0-7011-49b4-9f67-f9766b24900f&begin=128&from=sharedlink)<br/>
-               MP2 Demo [Video Available Soon]()"
+               [Recorded Video](https://classtranscribe.illinois.edu/video?id=36abfac0-7011-49b4-9f67-f9766b24900f&begin=128&from=sharedlink)"
   title: "Rendering: Rasterization"
-- 
+-
   date: "Week 6: Feb 21"
+  materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+              Basic Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf)<br/>
+              Deferred Shading [PDF]()<br/>
+              Game Design: Stardew Valley [PDF]()"
+  title: "Rendering: Shading"
+- 
+  date: "Week 6: Feb 23"
   materials: " [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
               UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)<br/>
               UE5 Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteRasterization.pdf)"
   title: "Rendering: UE5 Nanite"
--
-  date: "Week 6: Feb 23"
-  materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>"
-  title: "Rendering: Shading"
 - 
   date: "Week 7: Feb 28"
   materials: "**HW1 Due** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105)<br/>"
