--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -66,7 +66,7 @@
   materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
               Basic Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf)<br/>
               Deferred Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-DeferredShading.pdf)<br/>
-              Game Design: Stardew Valley [PDF]()"
+              Game Design: Stardew Valley [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-StardewValley.pdf)"
   title: "Rendering: Shading"
 - 
   date: "Week 6: Feb 23"
