--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -63,13 +63,13 @@
   title: "Rendering: Rasterization"
 -
   date: "Week 6: Feb 21"
-  materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+  materials: "[Lecture Video](https://classtranscribe.illinois.edu/video?id=e36061ad-7deb-46dd-ba87-cb4ec0c2b571&from=sharedlink)<br/>
               Basic Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf)<br/>
               Game Design: Stardew Valley [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-StardewValley.pdf)"
   title: "Rendering: Shading"
 - 
   date: "Week 6: Feb 23"
-  materials: " [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+  materials: " [Lecture Video](https://classtranscribe.illinois.edu/video?id=1417edcf-88c2-4042-a34a-cbf60d88583d&begin=476&from=sharedlink)<br/>
                 Shading Worksheet [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/pdf/CS%20415-Worksheet-Phong.pdf) <br/> 
                 Deferred Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-DeferredShading.pdf)<br/>
                 UE5 Materials [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Material.pdf)"
