--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -78,6 +78,7 @@
   date: "Week 7: Feb 28"
   materials: "**HW1 Due** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105)<br/>
                [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+              UE5 Nanite Example [YouTube](https://youtu.be/DKvA7NZRUcg)<br/>
               UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)<br/>
               UE5 Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteRasterization.pdf)"
   title: "Rendering: UE5 Nanite"  
