--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -86,6 +86,7 @@
   date: "Week 7: Mar 2"
   materials: "**Zoom Only - No In-Person** <br/>
                  [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+                 Design: Dragon Age: Dreadwol f[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Design-DragonAgeDreadwolf.pdf)<br/><br/>
                 **Pre-Recorded Videos:**<br/>
                 Design Methodologies [Video](https://classtranscribe.illinois.edu/video?id=43939a1e-83eb-4e86-9922-779d58b96195&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet1%20Intro.pdf) <br/> 
                 Principles of Design [Video](https://classtranscribe.illinois.edu/video?id=2cc09042-db19-4bc3-b4c5-798ca4d4382a&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet2%20Principles%20NV.pdf) <br/> 
