--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -77,16 +77,15 @@
 - 
   date: "Week 7: Feb 28"
   materials: "**HW1 Due** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105)<br/>
-               [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+               [Lecture Video - Coming Soon]()<br/>
               UE5 Nanite Example [YouTube](https://youtu.be/DKvA7NZRUcg)<br/>
-              UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)<br/>
-              UE5 Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteRasterization.pdf)"
+              UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)"
   title: "Rendering: UE5 Nanite"  
 -  
   date: "Week 7: Mar 2"
   materials: "**Zoom Only - No In-Person** <br/>
-                 [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
-                 Design: Dragon Age: Dreadwol f[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Design-DragonAgeDreadwolf.pdf)<br/><br/>
+                 [Lecture Video - Coming Soon]()<br/>
+                 Design: Dragon Age: Dreadwolf[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Design-DragonAgeDreadwolf.pdf)<br/><br/>
                 **Pre-Recorded Videos:**<br/>
                 Design Methodologies [Video](https://classtranscribe.illinois.edu/video?id=43939a1e-83eb-4e86-9922-779d58b96195&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet1%20Intro.pdf) <br/> 
                 Principles of Design [Video](https://classtranscribe.illinois.edu/video?id=2cc09042-db19-4bc3-b4c5-798ca4d4382a&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet2%20Principles%20NV.pdf) <br/> 
@@ -96,11 +95,14 @@
   title: "Project Overview"
 -  
   date: "Week 8: Mar 7"
-  materials: "The Game Industry [PDF - Coming Soon]() <br/>
+  materials: "**Zoom Only - No In-Person** <br/>
+               [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>
+              The Game Industry [PDF - Coming Soon]() <br/>
               [UIUC Game Studio](http://games.illinois.edu/)"
   title: "Guest Lecture: Dan Cermak"
 - 
   date: "Week 8: Mar 9"
+  materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)"
   title: "Game AI"
 - 
   date: "Week 9: Mar 13"
@@ -110,7 +112,9 @@
   title: "**Spring Break**"
 -
   date: "Week 10: Mar 21"
-  materials:
+  materials: "**No Lecture** <br/>
+             **Pre-Recorded Videos:**<br/>
+             UE5 Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteRasterization.pdf) <br/>"
   title: "Game AI"
 -
   date: "Week 10: Mar 23"
