--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -77,14 +77,14 @@
 - 
   date: "Week 7: Feb 28"
   materials: "**HW1 Due** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105)<br/>
-               [Lecture Video - Coming Soon]()<br/>
+               [Lecture Video](https://classtranscribe.illinois.edu/video?id=889a999d-a0f6-447e-b12d-025f705e7345&begin=336&from=sharedlink)<br/>
               UE5 Nanite Example [YouTube](https://youtu.be/DKvA7NZRUcg)<br/>
               UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)"
   title: "Rendering: UE5 Nanite"  
 -  
   date: "Week 7: Mar 2"
   materials: "**Zoom Only - No In-Person** <br/>
-                 [Lecture Video - Coming Soon]()<br/>
+                 [Lecture Video](https://classtranscribe.illinois.edu/video?id=3b69d7f8-efe9-438e-895b-8b6ec751971c&from=sharedlink)<br/>
                  Design: Dragon Age: Dreadwolf[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Design-DragonAgeDreadwolf.pdf)<br/><br/>
                 **Pre-Recorded Videos:**<br/>
                 Design Methodologies [Video](https://classtranscribe.illinois.edu/video?id=43939a1e-83eb-4e86-9922-779d58b96195&from=sharedlink) &nbsp; [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/CS%20DesignSet1%20Intro.pdf) <br/> 
