--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -102,7 +102,8 @@
   date: "Week 8: Mar 9"
   materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09) <br/>
               Pathfinding [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-3.pdf)<br/>
-              A* in Games [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-4.pdf)"
+              A* in Games [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-4.pdf)<br/>
+              HW2 Hints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/pdf/HW2Hints.pdf)"
   title: "Game AI"
 - 
   date: "Week 9: Mar 13"
