--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -114,11 +114,11 @@
   date: "Week 10: Mar 21"
   materials: "**No Lecture** <br/>
              **Pre-Recorded Videos:**<br/>
-             UE5 Rasterization [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteRasterization.pdf) <br/>
+             UE5 Rasterization [Video](https://classtranscribe.illinois.edu/video?id=3cf69b56-d5f7-4ed9-968a-2cccd939eac0&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteRasterization.pdf) <br/>
              Game AI History [Video](https://classtranscribe.illinois.edu/video?id=cba3333a-7004-4582-8605-b9cef1b2b740&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-1.pdf) <br/>
              **4 Credit Lectures**<br/>
              Intro to VR [Video](https://classtranscribe.illinois.edu/video?id=3f8213d0-487a-4414-99f7-ebafca954453&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-VR-Intro.pdf)<br/>
-             VR in UE5 [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-VR-UE5.pdf)"
+             VR in UE - No Video [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-VR-UE5.pdf)"
   title: "Game AI"
 -
   date: "Week 10: Mar 23"
