--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -122,6 +122,7 @@
   title: "Game AI"
 -
   date: "Week 10: Mar 23"
+  materials: "**[Exam Link](https://us.prairielearn.com/pl/course_instance/130105/assessment/2335856)**"
   title: "**No Lecture: Exam Day**"
 -
   date: "Week 11: Mar 28"
