--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -127,6 +127,7 @@
 -
   date: "Week 11: Mar 28"
   materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09) <br/>
+            **HW3 Assigned** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105/assessment/2338595)<br/>
             Waypoints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-AI-5.pptx.pdf)<br/>
             Physics Engine Basics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PhysicsEngine.pdf)"
   title: "Game AI & Physics"
@@ -142,7 +143,7 @@
   title: "Animation"
 -  
   date: "Week 13: Apr 11"
-  materials: ""
+  materials: "**HW3 Due** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105/assessment/2338595)<br/>"
   title: "Animation"
 -
   date: "Week 13: Apr 13"
