--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -133,6 +133,8 @@
   title: "Game AI & Physics"
 -
   date: "Week 11: Mar 30"
+  materials: "**No Lecture** <br/>
+             **Pre-Recorded Videos:**<br/>"
   title: "Game Physics"
 -
   date: "Week 12: Apr 4"
