--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -134,7 +134,10 @@
 -
   date: "Week 11: Mar 30"
   materials: "**No Lecture** <br/>
-             **Pre-Recorded Videos:**<br/>"
+             **Pre-Recorded Videos:**<br/>
+             Guest Lectures by Luther Tychonievich<br/>
+             Dectruction Physics [Video](https://classtranscribe.illinois.edu/video?id=03c163f0-eeb7-486b-956e-878657784dc2&from=sharedlink)<br/>
+             Ragdoll Physics [Video](https://classtranscribe.illinois.edu/video?id=d359d929-d125-4f3f-9f12-31f07b250022&from=sharedlink)"
   title: "Game Physics"
 -
   date: "Week 12: Apr 4"
