--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -126,7 +126,7 @@
   title: "**No Lecture: Exam Day**"
 -
   date: "Week 11: Mar 28"
-  materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09) <br/>
+  materials: "[Video](https://classtranscribe.illinois.edu/video?id=99179615-a9a9-4c87-8f9d-80315c68126b&begin=95&from=sharedlink)<br/>
             **HW3 Assigned** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105/assessment/2338595)<br/>
             Waypoints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-AI-5.pptx.pdf)<br/>
             Physics Engine Basics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PhysicsEngine.pdf)"
@@ -142,7 +142,7 @@
   title: "Game Physics"
 -
   date: "Week 12: Apr 4"
-  materials: ""
+  materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09) <br/>"
   title: "Game Physics"
 - 
   date: "Week 12: Apr 6"
