--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -137,7 +137,7 @@
              **Pre-Recorded Videos:**<br/>
              Chaos Physics in UE [YouTube](https://youtu.be/6T8LzaIq3Qs)<br/>
              Guest Lectures by Luther Tychonievich<br/>
-             Dectruction Physics [Video](https://classtranscribe.illinois.edu/video?id=03c163f0-eeb7-486b-956e-878657784dc2&from=sharedlink)<br/>
+             Destruction Physics [Video](https://classtranscribe.illinois.edu/video?id=03c163f0-eeb7-486b-956e-878657784dc2&from=sharedlink)<br/>
              Ragdoll Physics [Video](https://classtranscribe.illinois.edu/video?id=d359d929-d125-4f3f-9f12-31f07b250022&from=sharedlink)"
   title: "Game Physics"
 -
