--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -137,8 +137,8 @@
              **Pre-Recorded Videos:**<br/>
              Chaos Physics in UE [YouTube](https://youtu.be/6T8LzaIq3Qs)<br/>
              Guest Lectures by Luther Tychonievich<br/>
-             Destruction Physics [Video]()<br/>
-             Ragdoll Physics [Video]()"
+             Destruction Physics [Video](https://classtranscribe.illinois.edu/video?id=8f16cd7f-e51f-4c86-976f-5962987b949b&from=sharedlink)<br/>
+             Ragdoll Physics [Video](https://classtranscribe.illinois.edu/video?id=35043ccf-b542-4f42-877a-d6aa7bac640a&from=sharedlink)"
   title: "Game Physics"
 -
   date: "Week 12: Apr 4"
