--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -151,7 +151,9 @@
   date: "Week 12: Apr 6"
   materials: "**No Lecture** <br/>
              **Pre-Recorded Videos:**<br/>
-             
+              Guest Lectures by Luther Tychonievich<br/>
+             Character Animation [Video](https://classtranscribe.illinois.edu/video?id=bf285438-0779-4a81-a2d4-9ece963789f2&from=sharedlink)<br/>
+             Rigid Body Dynamics [Video](https://classtranscribe.illinois.edu/video?id=51171b76-711e-45a8-a5a1-1a9c903bbcd3&from=sharedlink)"  
              "
   title: "Animation"
 -  
