--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -157,9 +157,9 @@
   title: "Animation"
 -  
   date: "Week 13: Apr 11"
-  materials: "[Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09) <br/>
+  materials: "[Video](https://classtranscribe.illinois.edu/video?id=f55d708b-8437-47da-b057-9c7354f2991a&begin=112&from=sharedlink) <br/>
                **HW3 Due** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105/assessment/2338595)<br/>
-               Transformations [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-GeometricTransformations.pdf)
+               Transformations [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-GeometricTransformations.pdf) <br/>
                Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf)"
   title: "Animation"
 -
@@ -171,7 +171,7 @@
   title: "Animation"
 -
   date: "Week 14: Apr 18"
-  materials: ""
+  materials: " [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>"
   title: "Rendering: UE5 Lumen"
 -
   date: "Week 14: Apr 20"
