--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -187,7 +187,7 @@
   materials: "**No Lecture** <br/>
              **Pre-Recorded Videos:**<br/>
              "
-  title: "Generartive AI Art"
+  title: "Generative AI Art"
 -
   date: "Week 16: May 2"
   title: "Guest Speaker"
