--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -166,7 +166,12 @@
   date: "Week 13: Apr 13"
   materials: "**No Lecture** <br/>
              **Pre-Recorded Videos:**<br/>
-             
+             Guest Lectures by Luther Tychonievich<br/>
+             Character Animation [Video](https://classtranscribe.illinois.edu/video?id=ff1e4c79-a4ba-4a85-a6f3-65eecca08eee&from=sharedlink)<br/>
+             **4 Credit Lectures**<br/>
+             Stereoscopic Concepts [Video](https://classtranscribe.illinois.edu/video?id=1d089ff7-eae6-4260-8365-0c0e84600be6&from=sharedlink) <br/>
+             Stereoscopic Calibration [Video](https://classtranscribe.illinois.edu/video?id=6b4dd742-281f-4399-9860-93aeedc73ec9&from=sharedlink) <br/>
+             Stereoscopic Implementation [Video](https://classtranscribe.illinois.edu/video?id=e531f14b-d3bf-4780-89dc-e134f826fb7d&from=sharedlink)
              "
   title: "Animation"
 -
