--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -165,6 +165,7 @@
 -
   date: "Week 13: Apr 13"
   materials: "**No Lecture** <br/>
+             **HW4 Assigned** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105/assessment/2341268)
              **Pre-Recorded Videos:**<br/>
              Guest Lectures by Luther Tychonievich<br/>
              Character Animation [Video](https://classtranscribe.illinois.edu/video?id=ff1e4c79-a4ba-4a85-a6f3-65eecca08eee&from=sharedlink)<br/>
