--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -168,7 +168,7 @@
              **HW4 Assigned** [PrairieLearn](https://us.prairielearn.com/pl/course_instance/130105/assessment/2341268)
              **Pre-Recorded Videos:**<br/>
              Guest Lectures by Luther Tychonievich<br/>
-             Character Animation [Video](https://classtranscribe.illinois.edu/video?id=ff1e4c79-a4ba-4a85-a6f3-65eecca08eee&from=sharedlink)<br/>
+             FABRIK [Video](https://classtranscribe.illinois.edu/video?id=eabce805-1973-4fee-b7df-9697d6eb97db&from=sharedlink)<br/>
              **4 Credit Lectures**<br/>
              Stereoscopic Concepts [Video](https://classtranscribe.illinois.edu/video?id=1d089ff7-eae6-4260-8365-0c0e84600be6&from=sharedlink) <br/>
              Stereoscopic Calibration [Video](https://classtranscribe.illinois.edu/video?id=6b4dd742-281f-4399-9860-93aeedc73ec9&from=sharedlink) <br/>
@@ -178,7 +178,7 @@
 -
   date: "Week 14: Apr 18"
   materials: " [Live Lecture Link](https://illinois.zoom.us/j/84908024844?pwd=eE14Z1NCK3NxblpwUExDYUplaVAvUT09)<br/>"
-  title: "Rendering: UE5 Lumen"
+  title: "Animation: Orientation"
 -
   date: "Week 14: Apr 20"
   materials: "**No Lecture** <br/>
@@ -187,7 +187,7 @@
   title: "Rendering: UE5 Lumen"
 -
   date: "Week 15: Apr 25"
-  title: "**No Lecture: Exam Day**"
+  title: "Guest Lecture"
 -
   date: "Week 15: Apr 27"
   materials: "**No Lecture** <br/>
@@ -196,5 +196,5 @@
   title: "Generative AI Art"
 -
   date: "Week 16: May 2"
-  title: "Guest Speaker"
+  title: "**No Lecture: Exam Day**"
 -
